--- a/Exploratory-Data-Analysis.ipynb
+++ b/Exploratory-Data-Analysis.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis (EDA)\n",
-    "\n",
-    "The JSON format data represents the \"ping\" data for an app for the month of February 2016. It has about 4.8 million rows. When the app is opened by a user, the app pings the analytics system. A user may ping multiple times in a day.\n",
-    "\n",
-    "The data has 5 columns: \n",
-    "1. date: date of the ping\n",
-    "2. timestamp: ping timestamp\n",
-    "3. uid: unique id assigned to users\n",
-    "4. isFirst: true if this is the user's first ping ever (some users have been using the app before February)\n",
-    "5. utmSource: traffic source from which the user came\n",
-    "\n",
-    "The dates are based on Pacific time. "
+    "# Exploratory Data Analysis (EDA)"
    ]
   },
   {
@@ -39,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import JSON data, view the data, and verify the date range from February 1, 2016 to February 29, 2016"
+    "Import JSON data, view the data, and verify the date range from February 1, 2016 to February 29, 2020"
    ]
   },
   {
@@ -48,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('./data.json')"
+    "df = pd.read_json('./data/mobile_data.json')"
    ]
   },
   {
@@ -204,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 - Show the daily active users over the month, including all users\n",
+    "### Question 1 - Show the daily active users over the month, including all users\n",
     "- When the app is opened by a user, the app pings the analytics system\n",
     "- A user is considered active if they pinged at least once on a given day\n",
     "- A user may ping multiple times in a day\n",
@@ -471,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2 - Calculate the daily retention curve for users who used the app for the first time on the following dates: Feb 4th, Feb 10th, and Feb 14th.  Also, show the number of users from each cohort\n",
+    "### Question 2 - Calculate the daily retention curve for users who used the app for the first time on the following dates: Feb 4th, Feb 10th, and Feb 14th.  Also, show the number of users from each cohort\n",
     "- Daily retention curve is defined as the % of users from the cohort, who used the product that day\n",
     "\n",
     "#### Number of the users from each cohort\n",
@@ -1005,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3 - Determine if there are any differences in usage based on where the users came from. From which traffic source does the app get its best users? Its worst users?\n",
+    "### Question 3 - Determine if there are any differences in usage based on where the users came from. From which traffic source does the app get its best users? Its worst users?\n",
     "- Copy the data of interest (`date`,`uid`, and `utmSource`) to a new DataFrame `utmsource_df`\n",
     "- 34.7% of `utmSource` is None\n",
     "- Drop the data where `utmSource` is None because the traffic source cannot be determined"
